# flight_WTR

./: 2020.12.25.md  README.md  gzl.txt
coding/: README.md  serial_ctl.cpp  serial_ctl.h
coding/circle_detector/: CMakeLists.txt  build_ws.sh  readme.md
coding/circle_detector/include/: HGWW.h  detector.h
coding/circle_detector/src/: main.cpp
coding/sun_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
coding/sun_ws/devel/lib/main_controller/: circle  counter  demo  main_fsm_node  rs_remap  show_status  tmp  tmp2
coding/sun_ws/devel/lib/pkgconfig/: main_controller.pc  realsense2_camera.pc  realsense2_description.pc
coding/sun_ws/devel/share/main_controller/cmake/: main_controllerConfig.cmake
coding/sun_ws/devel/share/realsense2_camera/cmake/: realsense2_camera-msg-paths.cmake  (+2 more)
coding/sun_ws/src/circle_detector/: V_sequence.txt  readme.md
coding/sun_ws/src/circle_detector/include/: MMCS.h  PPS.h
coding/sun_ws/src/main_controller/: CMakeLists.txt  README2.md  developLOG.md  readme.md
coding/sun_ws/src/main_controller/App/: laser_node.cpp  mav_fsm_node.cpp  realsenseRemap.cpp  realsenseRemap_backup.cpp  showStatus.cpp  t265_ctl_node.cpp  test_circle.cpp
coding/sun_ws/src/main_controller/config/: config.yaml  default.rviz  default.yaml  error.yaml  target.yaml
coding/sun_ws/src/main_controller/include/: FiniteStateMachine.h
coding/sun_ws/src/main_controller/include/MathTools/: Fisheye.h  HoughCircle.h  MMCS.h  PFS.h  PIDcontroller.h  PPS.h  PSO.h  PositionTools.h
coding/sun_ws/src/main_controller/include/MsgJar/: Communication.h  MsgJar.h  ac_remap.h  rs_remap.h
coding/sun_ws/src/main_controller/include/Reference/: calculate.h  common_include.h  mav_fsm.h  sun.h
coding/sun_ws/src/main_controller/include/StateWorkerInclude/: .DetectPoseWorker.h.swp  Adaptive_LearningWorker.h  DetectPoseWorker.h  DetectingWorker.h  DockingWorker.h  HeightServWorker.h  LandingWorker.h  ManualWorker.h  OffloadingWorker.h  PoseOffloadWorker.h  PositionWorker.h  StateWorker.h  TakeoffWorker.h  WaitingWorker.h  common_defination.h  common_parameters.h  workers_common_include.h
coding/sun_ws/src/main_controller/launch/: .t265.launch.swp  t265.launch
coding/sun_ws/src/main_controller/scripts/: .servo_button_node.py.swp  covlowvel.py  get_cam_intrinsic.py  mylowvel.uf2  servo_blue.py  servo_button_node.py
coding/sun_ws/src/main_controller/src/: counter.cpp  demo.cpp  tmp.cpp  tmp2.cpp
diy大无人机/: l515.SLDPRT  主体无人机.SLDASM  俯仰角调试件.SLDASM  电机座铝管.SLDPRT  碳管座.SLDASM  立柱.SLDPRT
diy大无人机/亚克力板切割/: 中机架板(3mm).SLDPRT
无人机图纸/diy大无人机/: 垫片.SLDPRT  支柱.SLDASM  电机座碳板.SLDPRT  立柱45mm.SLDPRT  轴承座连接件.SLDPRT
无人机图纸/diy大无人机2020_12_29/: Manifold2.sldprt  pid调试架固定件.SLDPRT  主体无人机.SLDASM  单臂.SLDASM  垫片5mm.SLDPRT  更新内容.txt  电机座.SLDASM  碳管.SLDPRT  碳管夹.SLDPRT  碳管立柱.SLDPRT  脚套.SLDPRT  脚架.SLDPRT  轴承座垫片.SLDPRT  轴承座连接件.SLDPRT
无人机图纸/diy大无人机2020_12_29/亚克力板切割/: ~$中机架板(3mm).SLDPRT  上机架板(3mm).SLDPRT  下机架板(3mm).SLDPRT  中机架板(3mm).SLDPRT
无人机图纸/diy大无人机2020_12_29/亚克力板切割/DXF/: 中机架板_3mm.DXF  垫片_4_5mm.dxf
无人机图纸/diy大无人机2021_01_08/: 更新内容.txt
无人机图纸/diy大无人机2021_01_08/亚克力板切割/: 上机架板3mm.SLDPRT  中机架板3mm.SLDPRT  垫片x8_5mm.SLDPRT
无人机图纸/diy大无人机2021_01_08/亚克力板切割/DXF/: 上机架板_3mm.DXF  中机架板_3mm.DXF  垫片_5mm_8.DXF
无人机图纸/diy大无人机2021_01_08/亚克力板切割/DXF/total/: flight_total_3mm.dxf
无人机图纸/diy大无人机2021_01_27/: 上机架板.SLDPRT  中机架板.SLDPRT
无人机图纸/diy大无人机2021_01_27/DXF/: 上机架板_3mm_2.DXF  中机架板_3mm_2.DXF
无人机图纸/diy大无人机2021_01_27/DXF/total/: flight_wtr_total_2.dxf
无人机图纸/diy大无人机2021_02_22/: 更新说明.md  柱子.SLDASM  碳管立柱.SLDPRT  脚架.SLDPRT
无人机图纸/diy大无人机2021_02_27/: 连接件.SLDPRT
无人机图纸/diy大无人机2021_03_05/: 上机架板.SLDPRT  下机架板.SLDPRT  中机架板.SLDPRT  圆柱.SLDPRT  圆柱.STEP
无人机图纸/diy大无人机2021_03_05/DXF/: 上机架板.DXF  下机架板.DXF  中机架板.DXF  轴承座连接件.DXF
无人机图纸/diy大无人机2021_03_12/: 515.SLDPRT  515.STL  圆柱.SLDPRT
无人机图纸/diy大无人机2021_03_19/: 515.SLDPRT  ~$柱子.SLDASM  上机架板.SLDPRT  下机架板.SLDPRT  中机架板.SLDPRT  单臂.SLDASM  垫片x8_13mm.SLDPRT  整体机架.SLDASM  柱子.SLDASM  电机座.SLDASM  电机座碳板.SLDPRT  电机座铝管.SLDPRT  碳管.SLDPRT  碳管夹.SLDPRT  碳管立柱.SLDPRT  立柱45mm.SLDPRT  脚架.SLDPRT  轴承座连接件.SLDPRT
无人机日志/: 2020.12.25.md  2021.1.27.md  2021.1.29.md  2021.3.22.md  2021.3.27.md  2021.4.6.md
箱子/: 上表面.SLDPRT  下表面.SLDPRT  前上表面.SLDPRT  前表面.SLDPRT  右合页.SLDPRT  合页.SLDASM  后上表面.SLDPRT  后表面.SLDPRT  固定底片.SLDPRT  左右上表面.SLDPRT  左右表面.SLDPRT  左合页.SLDPRT  把手.SLDPRT  整个盒子.SLDASM  柱子片.SLDPRT  横向铝管.SLDPRT  盖子.SLDASM  碳管固定件上.SLDPRT  碳管固定件下.SLDPRT  碳管固定柱.SLDASM  纵向上铝管.SLDPRT  纵向铝管.SLDPRT
箱子/铝管加工/: 横向铝管380_20_20_8.dxf  横向铝管400_20_20_8_45度.dxf  纵向上铝管60_20_20_4.dxf  纵向铝管280_20_20_4.dxf
货舱/手爪2021_01_23/: 加工说明.md  半个爪子.SLDASM  手爪片.SLDPRT  手爪片2.SLDPRT  整个爪子.SLDASM  连接片.SLDPRT
货舱/手爪2021_01_28/: abs_3_7_20.SLDPRT  右爪.SLDASM  右爪.SLDPRT  右爪片.SLDPRT  安装板.SLDPRT  左爪.SLDASM  左爪.SLDPRT  左爪片.SLDPRT  整个爪子.SLDASM  直齿M2X16.SLDPRT
货舱/手爪2021_02_21/: 加工说明.md  手指.SLDPRT  手指右.SLDPRT  手指左.SLDPRT  手指左.STL  手爪.SLDASM  滑轨.SLDPRT  盘子.SLDPRT  舵轮.SLDPRT
货舱/手爪2021_02_21/DXF/: 滑轨x2.DXF  盘子.DXF  连杆x4.DXF
货舱/手爪2021_02_21/DXF/total/: flight_wtr_3mm.dxf  flight_wtr_4mm.dxf
货舱/手爪2021_03_01/: 单轴舵机.SLDPRT  手指右.SLDPRT  手指左.SLDPRT  滑轨.SLDPRT  盘子.SLDPRT  装配体盘子.SLDASM  连杆.SLDPRT
货舱/手爪2021_03_01/3d/: 手指右.STL  手指左.STL
货舱/手爪2021_03_01/DXF/: 滑轨.DXF  盘子.DXF  连杆.DXF
(+5 files in other folders)
